--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/platform-server": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angularfire2": "^5.0.0-rc.3",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "firebase": "^4.6.0",
+    "firebase-tools": "^3.14.0",
+    "g": "^2.0.1",
     "promise-polyfill": "6.0.2",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
